# TFIDF

./: .env.example  DOCKERFILE  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  random_strings.txt  st  tfidf.py
app/: db_models.py  dependencies.py  document.py  init_db.py  main.py  tfidf.py  valkey.py
app/controllers/: collection.py  document.py  metrics.py  user.py
app/controllers/utils/: responses.py
app/db/: __init__.py  models.py
app/metrics/: __init__.py
app/repositories/: collection.py  corpus.py  document.py  user.py
app/services/: auth.py  huffman.py  storage.py  text_processing.py  tfidf_service.py  token_manager.py
app/templates/: index.html
app/utils/: __init__.py  auth.py  cache.py  metrics.py  storage.py  text_processing.py  token_manager.py  valkey.py
templates/: index.html
tests/: base_tests.py  conftest.py  mock_redis.py  test_base.py  test_tfidf.py
tests/controllers/: test_document_controller.py  test_user_controller.py
