[project]
name = "tfidf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
